Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-92207

Qmllint does not warn about use of deprecated property in binding

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 6.2.0 Alpha
    • 6.2
    • QML: Tooling
    • None
    • 2e85f3492b994b9b47812d0aeedeb2ee6df04cfc (qt/qtdeclarative/dev)

    Description

      A.qml contains a deprecated property; B.qml assigns a binding to it.
      qmllint B.qml dose not warn about it, though.

      Attachments

        1. A.qml
          0.1 kB
        2. B.qml
          0.0 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            max.goldstein Maximilian Goldstein
            fabiankosmale Fabian Kosmale
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes