qmllint: Warn about bindings on deprecated properties

qmllint will now warn about bindings on deprecated properties as opposed to only warning when the property itself referenced.

Fixes: QTBUG-92207
Change-Id: I93c54d55e2ab2ca0648f67ac967c792d3ba60844
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>