tests/auto/qml/qmllint/data/DeprProp.qml
@@ -1,0 +1,8 @@
+import QtQml
+
+QtObject {
+    @Deprecated {}
+    property int deprecated: 500
+    @Deprecated { reason: "Test" }
+    property int deprecatedReason: 200
+}
