tests/auto/qml/qmllint/data/deprecatedPropertyBinding.qml
@@ -1,0 +1,3 @@
+DeprProp {
+    deprecated: 200
+}
