tests/auto/qml/qmllint/data/deprecatedPropertyBindingReason.qml
@@ -1,0 +1,3 @@
+DeprProp {
+    deprecatedReason: 200
+}
